--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,6 @@
 .container__box {
     width: 80%;
     height: 70%;
-    background: #f5f5f5;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -21,21 +20,28 @@
 
 body {
     margin: 0px;
-    background: hsl(0, 100%, 74%) 
+    background: hsl(0, 100%, 74%) ;
+    font-family: 'Poppins', sans-serif;
 }
 /* Left Box --------------------------------------- */
 .box__left {
-    background: gray;
     width: 100%;
     height: 100%;
     display: flex;
     flex-direction: column;
     align-items:flex-start;
     justify-content: center;
+    color: #f5f5f5;
 }
 
-h1 {
+.box__left h1 {
     margin-bottom: 5%;
+    font-size: 3rem;
+    font-weight: 700;
+}
+
+.box__left p {
+    font-weight: 500;
 }
 
 
@@ -45,6 +51,7 @@ h1 {
 
 /* Right box -------------------------------------- */
 .box__right {
+    background: #f5f5f5;
     width: 100%;
     height: 100%;
 }
