--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,9 @@
+*{
+    font-size: 62.5%;
+    font-family: 'Poppins', sans-serif;
+}
+
+/* Body and main --------------------------------- */
 .container {
     width: 100vw;
     height: 100vh;
@@ -6,8 +12,6 @@
     justify-content: center;
     align-items: center;
     background-image: url("images/bg-intro-desktop.png");
-
-
 }
 
 .container__box {
@@ -21,8 +25,9 @@
 body {
     margin: 0px;
     background: hsl(0, 100%, 74%) ;
-    font-family: 'Poppins', sans-serif;
+    
 }
+/* ------------------------------------------------ */
 /* Left Box --------------------------------------- */
 .box__left {
     width: 100%;
@@ -42,19 +47,93 @@ body {
 
 .box__left p {
     font-weight: 500;
+    font-size: 1rem;
 }
 
-
-
-
 /* ------------------------------------------------ */
-
 /* Right box -------------------------------------- */
 .box__right {
-    background: #f5f5f5;
+    width: 100%;
+    height: 100%;
+    /* display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center; */
+
+}
+
+.form__wraper {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+
+.form__header {
     width: 100%;
     height: 100%;
 }
+
+.form__header h2 {
+    background: hsl(246, 23%, 48%);
+    color: #f5f5f5;
+    font-size: 1rem;
+    padding: 1rem;
+    border-radius: 0.5rem;
+    box-shadow: 0 0.4rem 0 hsla(0, 29%, 30%, 0.336);
+    margin: 0 0 4% 0;
+}
+
+.weight__700 {
+    font-weight: 700;
+}
+
+.form {
+    background: #f5f5f5;
+    display: flex;
+    flex-direction: column;
+    padding: 1.5rem;
+    border-radius: 0.5rem;
+}
+
+.form input {
+    padding: 0.5rem;
+    font-size: 1rem;
+    font-weight: 600;
+    border-radius: 0.5rem;
+    border: solid 1px hsla(255, 2%, 64%, 0.253);
+    margin: 2%;
+}
+
+.form button {
+    background: hsl(154, 59%, 51%);
+    font-size: 1rem;
+    font-weight: 600;
+    color: #f5f5f5;
+    padding: 0.5rem;
+    margin: 2%;
+    border: none;
+    border-radius: 0.5rem;
+}
+
+.form h3 {
+    padding-top: 1%;
+    padding-bottom: 5%;
+    font-size: 0.6rem;
+    color: #b4afaf;
+}
+
+.letraVermelha {
+    color: hsl(0, 100%, 74%);
+    font-weight: 700;
+}
+
+
+
+
 /* ------------------------------------------------ */
 
 
