--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 *{
     font-size: 62.5%;
     font-family: 'Poppins', sans-serif;
+    box-sizing: border-box;
 }
 
 /* Body and main --------------------------------- */
@@ -12,13 +13,12 @@
     justify-content: center;
     align-items: center;
     background-image: url("images/bg-intro-desktop.png");
+    padding: 0 10%;
 }
 
 .container__box {
-    width: 80%;
-    height: 70%;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
 }
 
@@ -30,12 +30,11 @@ body {
 /* ------------------------------------------------ */
 /* Left Box --------------------------------------- */
 .box__left {
-    width: 100%;
+    width: 45%;
     height: 100%;
     display: flex;
     flex-direction: column;
-    align-items:flex-start;
-    justify-content: center;
+    align-items:center;
     color: #f5f5f5;
 }
 
@@ -53,14 +52,8 @@ body {
 /* ------------------------------------------------ */
 /* Right box -------------------------------------- */
 .box__right {
-    width: 100%;
+    width: 45%;
     height: 100%;
-    /* display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center; */
-
 }
 
 .form__wraper {
@@ -106,6 +99,11 @@ body {
     border-radius: 0.5rem;
     border: solid 1px hsla(255, 2%, 64%, 0.253);
     margin: 2%;
+}
+
+.form input:focus {
+    outline: none;
+    border: solid 1px hsl(246, 23%, 48%);
 }
 
 .form button {
