--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ body {
     width: 100vw; /* tirar */
     height: 100vh; 
     display: flex;
-    justify-content: center;  /* justify-content: space-evenly */;
+    justify-content: space-evenly;  /* justify-content: space-evenly */;
     align-items: center; /* tirar */
     background-image: url("images/bg-intro-desktop.png");
 }
@@ -25,8 +25,8 @@ body {
     max-width: 1440px;
     display: flex;
     gap: 5%;
-    justify-content: space-evenly; /* center */
-    align-items: center; /* tirar */
+    justify-content: center; /* center */
+    /* align-items: center; tirar */
     padding: 0 10%; /* margin: 0 10%; */
 }
 
@@ -34,13 +34,18 @@ body {
 /* Left Box --------------------------------------- */
 .box__left {
     width: 45%; /* 35% */
-    height: 100%; /* tirar */
+    /* height: 100%; tirar */
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items:center;
     gap: 5%;
     color: #f5f5f5;
+}
+
+.text__wraper {
+    height: 100%;
+    min-height: 100%;
 }
 
 .box__left h1 {
@@ -72,6 +77,10 @@ body {
 .form__header {
     width: 100%;
     height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    gap: 5%
 }
 
 .form__header h2 {
@@ -81,7 +90,6 @@ body {
     padding: 1rem;
     border-radius: 0.5rem;
     box-shadow: 0 0.4rem 0 hsla(0, 29%, 30%, 0.336);
-    margin: 0 0 4% 0;
 }
 
 .weight__700 {
@@ -92,17 +100,19 @@ body {
     background: #f5f5f5;
     display: flex;
     flex-direction: column;
-    padding: 1.5rem;
+    align-items: center;
+    padding: 1.5rem 1.5rem;
     border-radius: 0.5rem;
 }
 
 .form input {
+    width: 100%;
     padding: 0.5rem;
     font-size: 1rem;
     font-weight: 600;
     border-radius: 0.5rem;
     border: solid 1px hsla(255, 2%, 64%, 0.253);
-    margin: 2%;
+    margin: 2% auto;
 }
 
 .form input:focus {
@@ -112,6 +122,7 @@ body {
 
 .form button {
     background: hsl(154, 59%, 51%);
+    width: 100%;
     font-size: 1rem;
     font-weight: 600;
     color: #f5f5f5;
@@ -122,8 +133,8 @@ body {
 }
 
 .form h3 {
-    padding-top: 1%;
-    padding-bottom: 5%;
+    width: 100%;
+    padding: 1%;
     font-size: 0.6rem;
     color: #b4afaf;
 }
@@ -137,5 +148,4 @@ body {
 
 
 /* ------------------------------------------------ */
-
-
+/* Footer ----------------------------------------- */
