--- a/styles.css
+++ b/styles.css
@@ -69,11 +69,14 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    gap: 5%
+    align-items: flex-start;
+    gap: 5%;
+    padding: 30% 0;
 }
 
 .form__header h2 {
     background: hsl(246, 23%, 48%);
+    width: 100%;
     color: #f5f5f5;
     font-size: 1rem;
     padding: 1.5rem;
@@ -87,10 +90,11 @@ body {
 
 .form {
     background: #f5f5f5;
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 56%;
     padding: 2rem 2rem;
     border-radius: 0.5rem;
     box-shadow: 0 0.5rem 0 hsla(0, 29%, 30%, 0.336);
