--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,8 @@ body {
     align-items: center;
 }
 .container {
-    width: 1440px;
+    width: 100vw;
+    max-width: 1440px;
     height: 900px; 
     background: hsl(0deg 100% 52% / 55%);
 }
@@ -22,7 +23,7 @@ body {
 .container__box {
     height: 100%;
     display: flex;
-    gap: 5%;
+    gap: 2rem;
 }
 
 /* ------------------------------------------------ */
@@ -33,7 +34,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items:flex-start;
-    gap: 5%;
+    gap: 1.5rem;
     color: #f5f5f5;
     padding-left: 10%;
 }
@@ -47,7 +48,6 @@ body {
 .box__left p {
     font-weight: 500;
     font-size: 1rem;
-    font-size: 16px;
     line-height: 1.5;
 }
 
@@ -70,8 +70,8 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
-    gap: 5%;
-    padding: 30% 0;
+    gap: 1.5rem;
+    padding: 10rem 0;
 }
 
 .form__header h2 {
@@ -91,7 +91,7 @@ body {
 .form {
     background: #f5f5f5;
     width: 100%;
-    height: 100%;
+    height: 31rem;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -107,7 +107,7 @@ body {
     font-weight: 600;
     border-radius: 0.5rem;
     border: solid 1px hsla(255, 2%, 64%, 0.253);
-    margin: 2% auto;
+    margin: 0.5rem auto;
 }
 
 .form input:focus {
@@ -128,7 +128,7 @@ body {
 }
 
 .form h3 {
-    padding: 1%;
+    padding: 0.5rem;
     font-size: 0.7rem;
     color: #b4afaf;
 }
@@ -138,8 +138,8 @@ body {
     font-weight: 700;
 }
 
-
-
-
 /* ------------------------------------------------ */
-/* Footer ----------------------------------------- */
+/* Dimension 1366x768 ----------------------------- */
+@media (max-width:){
+    
+}
