--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,6 @@ body {
     background-image: url(images/bg-intro-desktop.png);
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
 }
 .container {
@@ -37,6 +36,7 @@ body {
     gap: 1.5rem;
     color: #f5f5f5;
     padding-left: 10%;
+    margin-right: 1rem;
 }
 
 .box__left h1 {
@@ -58,10 +58,7 @@ body {
     height: 100%;
     text-align: center;
     padding-right: 10%;
-}
-
-.form__wraper {
-    height: 100%;
+    margin-left: 1rem;
 }
 
 .form__header {
@@ -70,8 +67,6 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
-    gap: 1.5rem;
-    padding: 10rem 0;
 }
 
 .form__header h2 {
@@ -82,6 +77,7 @@ body {
     padding: 1.5rem;
     border-radius: 0.5rem;
     box-shadow: 0 0.5rem 0 hsla(0, 29%, 30%, 0.336);
+    margin-bottom: 0.75rem;
 }
 
 .weight__700 {
@@ -91,13 +87,13 @@ body {
 .form {
     background: #f5f5f5;
     width: 100%;
-    height: 31rem;
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 2rem 2rem;
     border-radius: 0.5rem;
     box-shadow: 0 0.5rem 0 hsla(0, 29%, 30%, 0.336);
+    margin-top: 0.75rem;
 }
 
 .form input {
@@ -139,7 +135,126 @@ body {
 }
 
 /* ------------------------------------------------ */
-/* Dimension 1366x768 ----------------------------- */
-@media (max-width:){
-    
+/* mobile responsive ----------------------------- */
+@media (max-width:900px){
+    body {
+        height: 100%;
+    }
+    .container {
+        padding: 5rem 0;
+    }
+
+    .container__box {
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    /* ------------------------------------------------------------ */
+    .box__left {
+        width: 70%;
+        text-align: center;
+        padding: 0;
+        margin-right: 0;
+        margin-bottom: 1rem;
+    }
+
+    .box__left h1 {
+
+    }
+
+    .box__left p{
+
+    }
+    /* ------------------------------------------------------- */
+    .box__right {
+        width: 70%;
+        padding: 0;
+        margin-left: 0;
+        margin-top: 1rem;
+    }
+
+    .form__header {
+        padding: 0;
+    }
+
+    .form__header h2 {
+        height: 100%;
+        padding: 1rem;
+    }
+
+    .form {
+       height: 100%;
+    }
+
+    .form input {
+
+    }
+    .form button {
+
+    }
+
+    .form h3 {
+
+    }    
+}
+/* lower than 650 px --------------------------------------- */
+@media (max-width:650px){
+    body {
+        height: 100%;
+    }
+    .container {
+        padding: 5rem 0;
+    }
+
+    .container__box {
+        flex-direction: column;
+        align-items: center;
+    }
+    /* ------------------------------------------------------------ */
+    .box__left {
+        width: 70%;
+        text-align: center;
+        padding: 0;
+    }
+
+    .box__left h1 {
+
+    }
+
+    .box__left p{
+
+    }
+    /* ------------------------------------------------------- */
+    .box__right {
+        width: 70%;
+        padding: 0;
+    }
+
+    .form__wraper {
+
+    }
+
+    .form__header {
+        padding: 0;
+    }
+
+    .form__header h2 {
+        height: 100%;
+        padding: 1rem;
+    }
+
+    .form {
+       height: 100%;
+    }
+
+    .form input {
+
+    }
+    .form button {
+
+    }
+
+    .form h3 {
+
+    }    
 }
