--- a/styles.css
+++ b/styles.css
@@ -11,19 +11,21 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 5rem;
+    justify-content: center;
+    /* padding: 5rem; */
 }
 .container {
     width: 100vw;
     max-width: 1440px;
     height: 100vh; 
+    max-height: 900px;
+    min-height: 900px;
     background: hsl(0deg 100% 52% / 55%);
 }
 
 .container__box {
     height: 100%;
     display: flex;
-    gap: 2rem;
 }
 
 /* ------------------------------------------------ */
@@ -37,7 +39,7 @@ body {
     gap: 1.5rem;
     color: #f5f5f5;
     padding-left: 10%;
-    margin-right: 1rem;
+    margin-right: 2rem;
 }
 
 .box__left h1 {
@@ -59,11 +61,11 @@ body {
     /* height: 100%; */
     text-align: center;
     padding-right: 10%;
-    margin-left: 1rem;
+    margin-left: 2rem;
 }
 
 .form__header {
-
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -144,8 +146,9 @@ body {
         padding: 0;
     }
     .container {
-        height: auto;
+        height: 100vh;
         padding: 5rem 0;
+        max-height: 100%;
     }
 
     .container__box {
@@ -159,7 +162,7 @@ body {
         text-align: center;
         padding: 0;
         margin-right: 0;
-        margin-bottom: 1rem;
+        margin-bottom: 2rem;
     }
 
     .box__left h1 {
@@ -174,7 +177,7 @@ body {
         width: 70%;
         padding: 0;
         margin-left: 0;
-        margin-top: 1rem;
+        margin-top: 2rem;
     }
 
     .form__header {
@@ -186,7 +189,7 @@ body {
     }
 
     .form {
-       height: 100%;
+       /* height: 100%; */
     }
 
     .form input {
@@ -203,19 +206,18 @@ body {
 /* lower than 650 px --------------------------------------- */
 @media (max-width:650px){
     body {
-        height: 100%;
+        
     }
     .container {
-        padding: 5rem 0;
+        /* padding: 5rem 0; */
     }
 
     .container__box {
-        flex-direction: column;
-        align-items: center;
+        
     }
     /* ------------------------------------------------------------ */
     .box__left {
-        width: 70%;
+        width: 80%;
         text-align: center;
         padding: 0;
     }
@@ -229,25 +231,19 @@ body {
     }
     /* ------------------------------------------------------- */
     .box__right {
-        width: 70%;
-        padding: 0;
-    }
-
-    .form__wraper {
-
+        width: 80%;
     }
 
     .form__header {
-        padding: 0;
+
     }
 
     .form__header h2 {
-        height: 100%;
-        padding: 1rem;
+
     }
 
     .form {
-       height: 100%;
+       /* height: 100%; */
     }
 
     .form input {
